added icons for sensors

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,7 @@ body{
   font-size: 3vh;
 }
 .container{
-  background-color: purple;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
    justify-items: flex-start;
