--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,3 +1,11 @@
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 .home{
     display: flex;
     flex-direction: column;
@@ -41,22 +49,27 @@
         padding: 5px;
         justify-content: flex-start;
         flex-wrap: wrap;
-        // gap:1px;
         margin: 0;
+        gap: 3px;
         .sensorCard{
             width: 25vh;
             height: 25vh;
             border: solid 1px lightgray;
             background-color: white;
             border-radius: 10px;
-            margin: 0 2px 0;
+            // margin: 0 2px 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
             padding: 0 1vh 1vh;
             align-items: center;
+              animation: fadeIn 0.5s ease-in-out;
             div{
                 text-align: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
             }
             .sensors{
                 // background-color: red;
@@ -68,7 +81,7 @@
                 align-items: center;
                 // margin: 1px 0 0;
                 div{
-                    border: solid 1px black;
+                    // border: solid 1px black;
                     height: 10vh;
                     width: 100%;
                     margin:1px;
@@ -82,7 +95,22 @@
                 text-align: center;
                 height: 4vh;
                 // border-radius:100px;
+                // p{
+                //     padding: 0;
+                //     margin: 0;
+                //     height: 4vh;
+                // }
+                // :hover{
+                    
+                // }
             }
+            &:hover{
+                background-color: white;
+                color: black;
+                cursor: pointer;
+                border: solid 0.5px purple;
+            }
+          
         }
     }
 }
