--- a/src/App.scss
+++ b/src/App.scss
@@ -94,5 +94,31 @@ h2 {
 .close{
   display: none;
 }
+.topBarCont{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: white;
+  width: 100%;
+  height: 6vh;
+  margin: 2vh;
+  border-radius: 5px;
+  p{
+      font-size: 2vh;
+  }
+  div{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
+      padding: 10px;
+      border-radius: 5px;
+  }
+  :hover{
+      background-color: snow;
+      cursor: pointer;
+  }
+}
 
 
