--- a/src/App.scss
+++ b/src/App.scss
@@ -103,6 +103,9 @@ h2 {
   height: 6vh;
   margin: 2vh;
   border-radius: 5px;
+  font-weight: 800;
+  list-style-type: none;
+
   p{
       font-size: 2vh;
   }
