--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,22 @@
+$primary-color: purple;
+@import '~loaders.css/src/animations/ball-clip-rotate.scss';
+@import '~loaders.css/src/animations/ball-grid-beat.scss';
+@import '~loaders.css/src/animations/ball-clip-rotate.scss';
+@import '~loaders.css/src/animations/ball-clip-rotate-multiple.scss';
+@import '~loaders.css/src/animations/ball-scale.scss';
+@import '~loaders.css/src/animations/ball-scale-multiple.scss';
+@import '~loaders.css/src/animations/ball-scale-ripple.scss';
+@import '~loaders.css/src/animations/ball-scale-ripple-multiple.scss';
+@import '~loaders.css/src/animations/cube-transition.scss';
+@import '~loaders.css/src/animations/line-scale.scss';
+@import '~loaders.css/src/animations/line-scale-pulse-out-rapid.scss';
+@import '~loaders.css/src/animations/pacman.scss';
+@import '~loaders.css/src/animations/semi-circle-spin.scss';
+@import '~loaders.css/src/animations/triangle-skew-spin.scss';
+@import '~loaders.css/src/animations/square-spin.scss';
+@import '~loaders.css/src/animations/cube-transition.scss';
+// @import '~loaders.css/src/animations/fading-circle-multiple.scss';
+
 .App {
   text-align: center;
 }
@@ -9,13 +28,25 @@
 body{
   font-family:monospace;
   background: linear-gradient(to right, purple, lightgray); 
+  // color: purple;
+  // input{
+  //   color: purple;
+  //   border: solid 1px purple;
+  // }
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -40,15 +71,22 @@ body{
   }
 }
 .buttonA{
-  background-color:lightslategray;
+  background-color:purple;
   font-weight: 700;
   color: white;
+  border: none;
   font-family: monospace;
   margin-top: 2vh;
   height: 4.5vh;
   width: 20vh;
   border-radius: 5px;
   font-size: 3vh;
+  &:hover{
+    cursor: pointer;
+    background-color: white;
+    border: solid 1px purple;
+    color: purple;
+  }
 }
 .container{
   background-color: transparent;
@@ -58,7 +96,16 @@ body{
   align-items: center;
   justify-content: center;
   width:100%;
-  height: 100vh;
+  height: 90vh;
+  h1{
+    font-size: 6vh;
+    color: white ;
+    border: solid 2px;
+    border-radius: 5px;
+    padding: 10px;
+    font-weight: bold;
+
+  }
 }
 .SideBar{
   position: relative;
@@ -117,11 +164,47 @@ h2 {
       background-color: white;
       padding: 10px;
       border-radius: 5px;
+      
   }
   :hover{
       background-color: snow;
       cursor: pointer;
   }
+  li{
+    text-decoration: none;
+}
+
 }
 
 
+.title{
+  font-size: 2vh;
+  background-color: transparent;
+  border: solid 1px white;
+  color: white;
+  font-weight: bold;
+  border-radius: 3px;
+  padding: 5px 4vh 5px;
+  // border: solid 1px black;
+}
+.loader{
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 1s 1s;
+  color: #282c34;
+  animation-fill-mode:forwards ;
+
+}
+.error{
+  position: absolute;
+  font-size:2vh;
+  color: red;
+  margin: 5px;
+}
