--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -13,41 +13,41 @@
     align-items: center;
     background-color: transparent;
     margin: 0 3vh 0;
-    .topBarCont{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        background-color: white;
-        width: 100%;
-        height: 6vh;
-        margin: 2vh;
-        border-radius: 5px;
-        p{
-            font-size: 2vh;
-        }
-        div{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: white;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        :hover{
-            background-color: snow;
-            cursor: pointer;
-        }
-    }
+    // .topBarCont{
+    //     display: flex;
+    //     flex-direction: row;
+    //     justify-content: space-between;
+    //     background-color: white;
+    //     width: 100%;
+    //     height: 6vh;
+    //     margin: 2vh;
+    //     border-radius: 5px;
+    //     p{
+    //         font-size: 2vh;
+    //     }
+    //     div{
+    //         display: flex;
+    //         flex-direction: column;
+    //         justify-content: center;
+    //         align-items: center;
+    //         background-color: white;
+    //         padding: 10px;
+    //         border-radius: 5px;
+    //     }
+    //     :hover{
+    //         background-color: snow;
+    //         cursor: pointer;
+    //     }
+    // }
     .homeBody{
         background-color: transparent;
-        height: 80vh;
+        height: 75vh;
         width: 100%;
         border-radius: 5px;
         display: flex;
         flex-direction: row;
         padding: 5px;
-        justify-content: flex-start;
+        justify-content: center;
         flex-wrap: wrap;
         margin: 0;
         gap: 3px;
@@ -86,6 +86,15 @@
                     width: 100%;
                     margin:1px;
                 }
+                .normal{
+                    color:green;
+                }
+                .low{
+                    color: skyblue;
+                }
+                .danger{
+                    color:red;
+                }
             }
             .btn_view{
                 margin-top: 2%;
@@ -113,4 +122,5 @@
           
         }
     }
+   
 }
