--- a/src/components/Settings.scss
+++ b/src/components/Settings.scss
@@ -3,16 +3,51 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 3vh 0;
+
     .settingsBody{
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
         width: 100%;
+    animation: fadeIn 0.5s ease-in-out;
+
         div{
-            border: solid 1px black;
-            height: 70vh;
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // border: solid 1px black;
+            height: 50vh;
             background-color: white;
-            width: 100%;
+            width: 55vh;
             border-radius: 10px;
+            margin: 5px;
+        }
+        .accinfo{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 2vh;
+            input{
+                font-size: 2vh;
+            }
+        }
+        .security{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 2vh;
+            input{
+                font-size: 2vh;
+            }
+
+            .btn_save{
+                font-size: 2vh;
+                height: 3vh;
+                width: 20%;
+            }
         }
     }
 }
