--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -15,13 +15,12 @@
         margin-left: 90%;
         font-size: 1.5vh;
         &:hover{
-            color: #333;
-            background-color: white;
+            color:#aaa;
+          text-decoration: none;
             cursor: pointer;
         }
     }
    
- 
   }
   
   .sidebar h2 {
