--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-$primary-color: purple;
+$primary-color: lightgray;
 @import '~loaders.css/src/animations/ball-clip-rotate.scss';
 @import '~loaders.css/src/animations/ball-grid-beat.scss';
 @import '~loaders.css/src/animations/ball-clip-rotate.scss';
@@ -27,7 +27,7 @@ $primary-color: purple;
 }
 body{
   font-family:monospace;
-  background: linear-gradient(to right, purple, lightgray); 
+  background: linear-gradient(to right, purple, gray); 
   // color: purple;
   // input{
   //   color: purple;
@@ -156,6 +156,7 @@ h2 {
   p{
       font-size: 2vh;
   }
+  
   div{
       display: flex;
       flex-direction: column;
@@ -163,12 +164,19 @@ h2 {
       align-items: center;
       background-color: white;
       padding: 10px;
-      border-radius: 5px;
+      // border-radius: 5px;
       
-  }
-  :hover{
-      background-color: snow;
-      cursor: pointer;
+      &:hover{
+          background-color: purple;
+          color:white;
+          cursor: pointer;
+      }
+      li{
+        list-style-type: none;
+        color: black;
+    text-decoration: none;
+
+      }
   }
   li{
     text-decoration: none;
