--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -2,10 +2,12 @@
 .sidebar {
     width: 200px;
     height: 95.5vh;
-    background-color: #333;
+    background:  linear-gradient(to bottom, purple, gray);
     color: white;
     padding: 20px;
     position: absolute;
+    // border: solid 1px black;
+    border-radius: 10px;
     top: 0;
     left: 0;
     display: flex;
@@ -20,7 +22,11 @@
             cursor: pointer;
         }
     }
-   
+
+    // li{
+
+    // }
+
   }
   
   .sidebar h2 {
@@ -30,10 +36,16 @@
   .sidebar ul {
     list-style-type: none;
     padding: 0;
+    // background-color: pink;
   }
   
   .sidebar ul li {
     margin: 10px 0;
+    text-decoration: none;
+    width: 100%;
+    // background-color: blue;
+
+  
   }
   
   .sidebar ul li a {
