added system recommendation and History page done

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -125,6 +125,8 @@
                 text-align: center;
                 height: 4vh;
                 border-radius: 5px;
+                border: solid 1px purple;
+
                 // border-radius:100px;
                 // p{
                 //     padding: 0;
