--- a/src/components/Logs.scss
+++ b/src/components/Logs.scss
@@ -5,12 +5,13 @@
     align-items: center;
     margin: 0 3vh 0;
     .logsBody{
-        height: 75vh;
+        height: 70vh;
         width: 60%;
         background-color: white;
         border-radius: 10px;
         padding: 10px;
         animation: fadeIn 0.5s ease-in-out;
+        overflow-y: auto;
         .message-table {
             width: 100%;
             border-collapse: collapse;
@@ -31,5 +32,26 @@
             }
         }
     }
+.btn_clear{
+background-color: purple;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin: 4px;
+width: 10%;
+height: 3vh;
+color: white;
+border: solid 1px purple;
 
+border-radius: 3px;
+&:hover{
+border: solid 1px white;
+background-color: transparent;
+color: white;
+cursor: pointer;
+font-weight: bolder;
+
+}
+}
 }
