--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -40,6 +40,9 @@
         border: solid 1px #aaa;
         padding: 2px 10px 0;
         border-radius: 5px;
+        width: 100%;
+        height: 20vh;
+        overflow-y: scroll;
         }
     .modalBody{
         display: flex;
