--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ $primary-color: lightgray;
 @import '~loaders.css/src/animations/square-spin.scss';
 @import '~loaders.css/src/animations/cube-transition.scss';
 // @import '~loaders.css/src/animations/fading-circle-multiple.scss';
-
+$bgimage:'/img/bg3.png';
 .App {
   text-align: center;
 }
@@ -27,7 +27,12 @@ $primary-color: lightgray;
 }
 body{
   font-family:monospace;
-  background: linear-gradient(to right, purple, gray); 
+  background: linear-gradient(to right, purple, gray);
+  // background: url($bgimage);
+  // background-size: cover;
+  // background-repeat: no-repeat;
+  width: auto; 
+  // overflow-x: scroll;
   // color: purple;
   // input{
   //   color: purple;
@@ -104,6 +109,8 @@ body{
     border-radius: 5px;
     padding: 10px;
     font-weight: bold;
+    box-shadow: 0 0 10px white;
+    // border: none;
 
   }
 }
@@ -152,7 +159,9 @@ h2 {
   border-radius: 5px;
   font-weight: 800;
   list-style-type: none;
-
+  border: solid 1px white;
+  box-shadow: 0px 0px 20px black;
+  // position: sticky;
   p{
       font-size: 2vh;
   }
@@ -164,6 +173,7 @@ h2 {
       align-items: center;
       background-color: white;
       padding: 10px;
+      border-radius: 5px;
       // border-radius: 5px;
       
       &:hover{
@@ -193,6 +203,7 @@ h2 {
   font-weight: bold;
   border-radius: 3px;
   padding: 5px 4vh 5px;
+  // box-shadow: 0 0 10px white;
   // border: solid 1px black;
 }
 .loader{
