--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -12,7 +12,10 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: transparent;
-    margin: 0 3vh 0;
+    // margin: 0 3vh 0;
+    width:auto ;
+    // overflow-x: auto;
+    // overflow-y: hidden;
     // .topBarCont{
     //     display: flex;
     //     flex-direction: row;
@@ -51,6 +54,8 @@
         flex-wrap: wrap;
         margin: 0;
         gap: 3px;
+        overflow-y: auto;
+        border-radius: 5px;
         .loading{
             font-size: 2vh;
             color: white;
@@ -68,6 +73,7 @@
             padding: 0 1vh 1vh;
             align-items: center;
               animation: fadeIn 0.5s ease-in-out;
+            //   box-shadow: 0 0 20px black;
             div{
                 text-align: center;
                 display: flex;
