--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -6,23 +6,28 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        width: 50vh;
-        height: 50vh;
+        width: fit-content;
+        height: fit-content;
         border-radius:5px ;
         animation: fadeIn 0.5s ease-in-out;
+        // backdrop-filter: blur(30px);
+        box-shadow: 0 0 20px black;
+        // overflow-x: hidden;
         .inputCont{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 45vh;
+            width: 43vh;
             font-size: 3vh;
+            // padding: 3px;
             // border: solid 1px red;
             input{
                 font-size: 3vh;
                 height: 5vh;
-                width: 100%;
+                width: 98%;
                 border-radius: 5px;
+                // margin: 0px 3px;
             }
         }
         .server-settings{
@@ -45,6 +50,7 @@
         font-weight: bolder;
         // background-color: red;
         text-align: center;
+        
       }
     }
 
