--- a/src/components/Logs.scss
+++ b/src/components/Logs.scss
@@ -3,15 +3,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 3vh 0;
+    // margin: 0 3vh 0;
+    width:100% ;
+    height: fit-content;
     .logsBody{
         height: 70vh;
-        width: 60%;
+        width: 80%;
         background-color: white;
         border-radius: 10px;
         padding: 10px;
         animation: fadeIn 0.5s ease-in-out;
         overflow-y: auto;
+        box-shadow: 0 0 20px black;
         .message-table {
             width: 100%;
             border-collapse: collapse;
