--- a/src/components/Settings.scss
+++ b/src/components/Settings.scss
@@ -1,9 +1,17 @@
 .settings{
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    margin: 0 3vh 0;
+    background-color: transparent;
+    // margin: 0 3vh 0;
+    // width:fit-content ;
+    // height: fit-content;
+    overflow: auto;
+    overflow-x: hidden;
+
+    
+    // overflow-x: scroll;
 
     .settingsBody{
         display: flex;
@@ -12,6 +20,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        height:100%;
     animation: fadeIn 0.5s ease-in-out;
 
         div{
@@ -19,11 +28,12 @@
             // flex-direction: column;
             // justify-content: center;
             // border: solid 1px black;
-            height: 50vh;
+            height: 40vh;
             background-color: white;
-            width: 55vh;
+            width: 40vh;
             border-radius: 10px;
             margin: 5px;
+            box-shadow: 0 0 10px black;
         }
         .accinfo{
             display: flex;
