--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -22,9 +22,11 @@
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     max-width: 500px; /* Optional max width */
-    height: 40vh;
+    height: 44vh;
     animation: fadeIn 0.1s ease-in;
     border-radius: 5px;
+    overflow-y: scroll;
+    overflow-x:hidden ;
 
     .btn_close{
         // background-color: pink;
@@ -36,22 +38,31 @@
         color: black;
         text-decoration: none;
     }
-    .output{
-        border: solid 1px #aaa;
-        padding: 2px 10px 0;
-        border-radius: 5px;
+    .output-div{
         width: 100%;
-        height: 25vh;
-        overflow-y: scroll;
-        }
+        margin-top: 2%;
+        .output{
+            border: solid 1px #aaa;
+            padding: 2px 10px 0;
+            border-radius: 5px;
+            width: 100%;
+            height: 15vh;
+            overflow-y: scroll;
+            }
+    }
     .modalBody{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     // background-color: pink;
         width: 100%;
+        height: 15vh;
+        // margin: 0;
+        // padding: 0px;
         .column{
             font-weight: 800;
+            margin: 0;
+            padding: 0;
             // background-color: red;
         }
         .value{
